<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emotionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emotionAdded"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timeAdded" />

            <TextView
                android:id="@+id/commentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textSize="18sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>